eliminating countries from the countries_data that are not in the covid_data

--- a/CleanData.ipynb
+++ b/CleanData.ipynb
@@ -237,10 +237,10 @@
       "Requirement already satisfied: matplotlib in c:\\users\\claud\\appdata\\roaming\\python\\python37\\site-packages (3.2.1)\n",
       "Requirement already satisfied: kiwisolver>=1.0.1 in c:\\users\\claud\\appdata\\roaming\\python\\python37\\site-packages (from matplotlib) (1.2.0)\n",
       "Requirement already satisfied: numpy>=1.11 in c:\\users\\claud\\appdata\\roaming\\python\\python37\\site-packages (from matplotlib) (1.18.3)\n",
-      "Requirement already satisfied: cycler>=0.10 in c:\\users\\claud\\appdata\\roaming\\python\\python37\\site-packages (from matplotlib) (0.10.0)\n",
-      "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in c:\\users\\claud\\appdata\\roaming\\python\\python37\\site-packages (from matplotlib) (2.4.7)\n",
       "Requirement already satisfied: python-dateutil>=2.1 in c:\\users\\claud\\miniconda3\\lib\\site-packages (from matplotlib) (2.8.1)\n",
-      "Requirement already satisfied: six in c:\\users\\claud\\miniconda3\\lib\\site-packages (from cycler>=0.10->matplotlib) (1.14.0)\n"
+      "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in c:\\users\\claud\\appdata\\roaming\\python\\python37\\site-packages (from matplotlib) (2.4.7)\n",
+      "Requirement already satisfied: cycler>=0.10 in c:\\users\\claud\\appdata\\roaming\\python\\python37\\site-packages (from matplotlib) (0.10.0)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\claud\\miniconda3\\lib\\site-packages (from python-dateutil>=2.1->matplotlib) (1.14.0)\n"
      ]
     }
    ],
@@ -305,15 +305,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
     "scrolled": false
    },
    "outputs": [],
@@ -323,15 +314,10 @@
     "pd.set_option('display.max_rows', covid_data_country_unique.shape[0]+1)\n",
     "print(covid_data_country_unique)\n",
     "\n",
-    "# Get names of indexes for which column Country/Region is not a country\n",
-    "index1 = covid_data[covid_data['Country/Region'] == 'Diamond Princess' ].index\n",
-    "index2 = covid_data[covid_data['Country/Region'] == 'MS Zaandam' ].index\n",
-    "index3 = covid_data[covid_data['Country/Region'] == 'Holy See' ].index\n",
-    " \n",
-    "# Delete these rows indexes from dataFrame\n",
-    "covid_data.drop(index1 , inplace=True)\n",
-    "covid_data.drop(index2 , inplace=True)\n",
-    "covid_data.drop(index3 , inplace=True)"
+    "# Get names of indexes for which column Country/Region is not a country and deleting these rows indexes from dataFrame\n",
+    "covid_data.drop(covid_data[covid_data['Country/Region'] == 'Diamond Princess' ].index , inplace=True)\n",
+    "covid_data.drop(covid_data[covid_data['Country/Region'] == 'MS Zaandam' ].index , inplace=True)\n",
+    "covid_data.drop(covid_data[covid_data['Country/Region'] == 'Holy See' ].index , inplace=True)"
    ]
   },
   {
@@ -339,15 +325,8 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "countries_data = pd.read_csv('countries of the world.csv')\n",
+    "countries_data = pd.read_csv('countries_data.csv')\n",
     "\n",
     "#removing trailing white spaces\n",
     "countries_data_country = countries_data['Country'].str.strip()\n",
@@ -421,13 +400,32 @@
    "outputs": [],
    "source": [
     "#replacing the column with the country names with the revised column\n",
-    "old_df = pd.DataFrame(countries_data)\n",
-    "reviwed_df = pd.DataFrame(countries_data_country)\n",
-    "new_df = old_df.assign(Country=reviwed_df['Country'])\n",
+    "countries_data_df = pd.DataFrame(countries_data)\n",
+    "countries_data_country_df = pd.DataFrame(countries_data_country)\n",
+    "new_countries_data_df = countries_data_df.assign(Country=countries_data_country_df['Country'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#eliminating countries from the countries_data that are not in the covid_data\n",
+    "countries_data = new_countries_data_df\n",
     "\n",
-    "#saving both cleaned data_sets into to a file\n",
-    "new_df.to_csv('countries_data_clean.csv')\n",
-    "\n",
+    "for x in unique_values:\n",
+    "  countries_data.drop(countries_data[countries_data['Country'] == x ].index , inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#saving cleaned data_set into to a file\n",
+    "countries_data_df.to_csv('countries_data_clean.csv')\n",
     "covid_data.to_csv('covid_data_clean.csv')"
    ]
   }
