--- a/CleanData.ipynb
+++ b/CleanData.ipynb
@@ -13,8 +13,8 @@
      "text": [
       "Defaulting to user installation because normal site-packages is not writeable\n",
       "Requirement already satisfied: pandas in /home/andreiagouveia23/.local/lib/python3.8/site-packages (1.0.3)\n",
-      "Requirement already satisfied: pytz>=2017.2 in /usr/lib/python3/dist-packages (from pandas) (2019.3)\n",
       "Requirement already satisfied: numpy>=1.13.3 in /home/andreiagouveia23/.local/lib/python3.8/site-packages (from pandas) (1.18.4)\n",
+      "Requirement already satisfied: pytz>=2017.2 in /usr/lib/python3/dist-packages (from pandas) (2019.3)\n",
       "Requirement already satisfied: python-dateutil>=2.6.1 in /usr/lib/python3/dist-packages (from pandas) (2.7.3)\n"
      ]
     }
@@ -242,20 +242,20 @@
       "Defaulting to user installation because normal site-packages is not writeable\n",
       "Requirement already satisfied: matplotlib in /home/andreiagouveia23/.local/lib/python3.8/site-packages (3.2.1)\n",
       "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /home/andreiagouveia23/.local/lib/python3.8/site-packages (from matplotlib) (2.4.7)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in /home/andreiagouveia23/.local/lib/python3.8/site-packages (from matplotlib) (1.2.0)\n",
+      "Requirement already satisfied: numpy>=1.11 in /home/andreiagouveia23/.local/lib/python3.8/site-packages (from matplotlib) (1.18.4)\n",
       "Requirement already satisfied: cycler>=0.10 in /home/andreiagouveia23/.local/lib/python3.8/site-packages (from matplotlib) (0.10.0)\n",
       "Requirement already satisfied: python-dateutil>=2.1 in /usr/lib/python3/dist-packages (from matplotlib) (2.7.3)\n",
-      "Requirement already satisfied: numpy>=1.11 in /home/andreiagouveia23/.local/lib/python3.8/site-packages (from matplotlib) (1.18.4)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in /home/andreiagouveia23/.local/lib/python3.8/site-packages (from matplotlib) (1.2.0)\n",
       "Requirement already satisfied: six in /usr/lib/python3/dist-packages (from cycler>=0.10->matplotlib) (1.14.0)\n",
       "Defaulting to user installation because normal site-packages is not writeable\n",
       "Requirement already satisfied: seaborn in /home/andreiagouveia23/.local/lib/python3.8/site-packages (0.10.1)\n",
       "Requirement already satisfied: matplotlib>=2.1.2 in /home/andreiagouveia23/.local/lib/python3.8/site-packages (from seaborn) (3.2.1)\n",
+      "Requirement already satisfied: numpy>=1.13.3 in /home/andreiagouveia23/.local/lib/python3.8/site-packages (from seaborn) (1.18.4)\n",
       "Requirement already satisfied: pandas>=0.22.0 in /home/andreiagouveia23/.local/lib/python3.8/site-packages (from seaborn) (1.0.3)\n",
       "Requirement already satisfied: scipy>=1.0.1 in /home/andreiagouveia23/.local/lib/python3.8/site-packages (from seaborn) (1.4.1)\n",
-      "Requirement already satisfied: numpy>=1.13.3 in /home/andreiagouveia23/.local/lib/python3.8/site-packages (from seaborn) (1.18.4)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in /home/andreiagouveia23/.local/lib/python3.8/site-packages (from matplotlib>=2.1.2->seaborn) (1.2.0)\n",
       "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /home/andreiagouveia23/.local/lib/python3.8/site-packages (from matplotlib>=2.1.2->seaborn) (2.4.7)\n",
       "Requirement already satisfied: cycler>=0.10 in /home/andreiagouveia23/.local/lib/python3.8/site-packages (from matplotlib>=2.1.2->seaborn) (0.10.0)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in /home/andreiagouveia23/.local/lib/python3.8/site-packages (from matplotlib>=2.1.2->seaborn) (1.2.0)\n",
       "Requirement already satisfied: python-dateutil>=2.1 in /usr/lib/python3/dist-packages (from matplotlib>=2.1.2->seaborn) (2.7.3)\n",
       "Requirement already satisfied: pytz>=2017.2 in /usr/lib/python3/dist-packages (from pandas>=0.22.0->seaborn) (2019.3)\n",
       "Requirement already satisfied: six in /usr/lib/python3/dist-packages (from cycler>=0.10->matplotlib>=2.1.2->seaborn) (1.14.0)\n"
@@ -1019,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1137,6 +1137,7 @@
     "    return int.from_bytes(mybytes, 'little') \n",
     "\n",
     "covid_data['Country/Region'] = covid_data['Country/Region'].apply(enconde_string)\n",
+    "covid_data['Date'] = pd.to_datetime(covid_data['Date'])\n",
     "\n",
     "#Test case\n",
     "variables = ['Cases' , 'Deaths']\n",
@@ -1156,7 +1157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1173,7 +1174,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-29-6d5b74b27467>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m         \u001b[0mmlpr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mMLPRegressor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmax_iter\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mit\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m         \u001b[0mmlpr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m \u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-20-d113d19ffcb1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m         \u001b[0;31m#need to fix date\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m         \u001b[0mmlpr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m \u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/.local/lib/python3.8/site-packages/sklearn/neural_network/_multilayer_perceptron.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, X, y)\u001b[0m\n\u001b[1;32m    639\u001b[0m         \u001b[0mself\u001b[0m \u001b[0;34m:\u001b[0m \u001b[0mreturns\u001b[0m \u001b[0ma\u001b[0m \u001b[0mtrained\u001b[0m \u001b[0mMLP\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    640\u001b[0m         \"\"\"\n\u001b[0;32m--> 641\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_fit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mincremental\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    642\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    643\u001b[0m     \u001b[0;34m@\u001b[0m\u001b[0mproperty\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/.local/lib/python3.8/site-packages/sklearn/neural_network/_multilayer_perceptron.py\u001b[0m in \u001b[0;36m_fit\u001b[0;34m(self, X, y, incremental)\u001b[0m\n\u001b[1;32m    324\u001b[0m                              hidden_layer_sizes)\n\u001b[1;32m    325\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 326\u001b[0;31m         \u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_validate_input\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mincremental\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    327\u001b[0m         \u001b[0mn_samples\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_features\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    328\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/.local/lib/python3.8/site-packages/sklearn/neural_network/_multilayer_perceptron.py\u001b[0m in \u001b[0;36m_validate_input\u001b[0;34m(self, X, y, incremental)\u001b[0m\n\u001b[1;32m   1386\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1387\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_validate_input\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mincremental\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1388\u001b[0;31m         X, y = self._validate_data(X, y, accept_sparse=['csr', 'csc'],\n\u001b[0m\u001b[1;32m   1389\u001b[0m                                    multi_output=True, y_numeric=True)\n\u001b[1;32m   1390\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndim\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m2\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
@@ -1189,6 +1190,7 @@
    ],
    "source": [
     "variablesScores = {}\n",
+    "#different nr of iterations to compare results\n",
     "max_iter_array = [50, 100, 150, 200, 250]\n",
     "\n",
     "for variable in variables:\n",
@@ -1201,7 +1203,7 @@
     "        mlpr = MLPRegressor(max_iter = it)\n",
     "        \n",
     "        #need to fix date\n",
-    "        #mlpr.fit(X_train , y_train)\n",
+    "        mlpr.fit(X_train , y_train)\n",
     "        "
    ]
   },
